Se arregla bug al desplegar secciones y departamentos en formularios de usuario.

--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -143,8 +143,8 @@
                     </tbody>
                 </table>
             }
-            <div class="col-auto">
-                <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+            <div class="d-flex justify-content-center">
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
     </div>
