--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -150,7 +150,7 @@
                 </table>
             }
             <div class="d-flex justify-content-center">
-                <a href="../Grupo/ListaGruposDisponibles" class="btn btn-primary">Regresar</a>
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
     </div>
