--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -123,7 +123,7 @@
                 </table>
             }
             <div class="d-flex justify-content-center">
-                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-secondary">Regresar</a>
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
     </div>
