--- a/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
+++ b/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
@@ -13,8 +13,8 @@
                 <p>@ViewBag.Correo</p>
             }
         </div>
-        <div class="card-footer text-muted">
-            <a href="../Grupo/ListaGruposDisponibles" class="btn btn-primary">Regresar</a>
+        <div class="d-flex justify-content-center">
+            <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
         </div>
     </div>
 </body>
