--- a/webMetics/Views/Usuario/Registrarse.cshtml
+++ b/webMetics/Views/Usuario/Registrarse.cshtml
@@ -141,222 +141,96 @@ else
     await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
 }
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        var tipoParticipante = $('#areaDropdown').val();
 
-        if (tipoParticipante !== '') {
-            // Make AJAX request to fetch departamentos for selected area
-            $.ajax({
-                url: '/Participante/GetTiposParticipante',
-                type: 'GET',
-                data: { tipoParticipante: tipoParticipante },
-                dataType: 'json',
-                success: function (data) {
-                    // Update departamento dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#tipoParticipanteDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching departamentos: ' + error
-                    });
-                }
-            });
-        }
+        // Handle change event of area dropdown
+        $('#areaDropdown').click(function () {
+            var areaName = $(this).val();
 
-        document.getElementById("tipoParticipanteDropdown").innerText = $('#tipoParticipanteDropdown').val();
-        document.getElementById("departamentoDropdown").innerText = $('#departamentoDropdown').val();
-        document.getElementById("seccionDropdown").innerText = $('#seccionDropdown').val();
-    });
-
-    $(document).ready(function () {
-        var areaName = $('#areaDropdown').val();
-
-        if (areaName !== '') {
-            // Make AJAX request to fetch departamentos for selected area
-            $.ajax({
-                url: '/Participante/GetDepartamentosByArea',
-                type: 'GET',
-                data: { areaName: areaName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update departamento dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching departamentos: ' + error
-                    });
-                }
-            });
-        }
-
-        document.getElementById("tipoParticipanteDropdown").innerText = $('#tipoParticipanteDropdown').val();
-        document.getElementById("departamentoDropdown").innerText = $('#departamentoDropdown').val();
-        document.getElementById("seccionDropdown").innerText = $('#seccionDropdown').val();
-    });
-
-    $(document).ready(function () {
-        var departamentoName = $('#departamentoDropdown').val();
-        var areaName = $('#areaDropdown').val();
-
-        if (departamentoName !== '') {
-            // Make AJAX request to fetch secciones for selected departamento
-            $.ajax({
-                url: '/Participante/GetSeccionesByDepartamento',
-                type: 'GET',
-                data: { areaName: areaName, departamentoName: departamentoName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update seccion dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching secciones: ' + error
-                    });
-                }
-            });
-        }
-
-        document.getElementById("tipoParticipanteDropdown").innerText = $('#tipoParticipanteDropdown').val();
-        document.getElementById("departamentoDropdown").innerText = $('#departamentoDropdown').val();
-        document.getElementById("seccionDropdown").innerText = $('#seccionDropdown').val();
-    });
-
-    window.addEventListener('scroll', function () {
-        var seccionName = $('#seccionDropdown').val();
-        var departamentoName = $('#departamentoDropdown').val();
-        var areaName = $('#areaDropdown').val();
-
-        if (seccionName !== '') {
-            document.getElementById("seccionDropdown").innerText = seccionName;
-
-            // Make AJAX request to fetch secciones for selected departamento
-            $.ajax({
-                url: '/Participante/GetSeccionesByDepartamento',
-                type: 'GET',
-                data: { areaName: areaName, departamentoName: departamentoName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update seccion dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching secciones: ' + error
-                    });
-                }
-            });
-        }
-    });
-
-    // Handle change event of area dropdown
-    $('#areaDropdown').change(function () {
-        var areaName = $('#areaDropdown').val();
-        if (areaName !== '') {
-
+            // Clear departamento and seccion dropdowns
             $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
             $('#seccionDropdown').empty().append('<option value="">Seleccione una sección...</option>');
 
-            // Make AJAX request to fetch departamentos for selected area
-            $.ajax({
-                url: '/Participante/GetDepartamentosByArea',
-                type: 'GET',
-                data: { areaName: areaName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update departamento dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching departamentos: ' + error
-                    });
-                }
-            });
+            if (areaName !== '') {
+                // Make AJAX request to fetch departamentos for selected area
+                $.ajax({
+                    url: '/Participante/GetDepartamentosByArea',
+                    type: 'GET',
+                    data: { areaName: areaName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update departamento dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching departamentos: ' + error
+                        });
+                    }
+                });
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update seccion dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
+                });
+            }
+        });
 
-            var departamentoName = $('#departamentoDropdown').val();
+        // Handle change event of departamento dropdown
+        $('#departamentoDropdown').change(function () {
+            var departamentoName = $(this).val();
+            var areaName = $('#areaDropdown').val();
 
-            // Make AJAX request to fetch secciones for selected departamento
-            $.ajax({
-                url: '/Participante/GetSeccionesByDepartamento',
-                type: 'GET',
-                data: { departamentoName: departamentoName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update seccion dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching secciones: ' + error
-                    });
-                }
-            });
-        }
-    });
+            // Clear seccion dropdown
+            $('#seccionDropdown').empty().append('<option value="">Seleccione una sección...</option>');
 
-    // Handle change event of departamento dropdown
-    $('#departamentoDropdown').change(function () {
-        var departamentoName = $(this).val();
-        var areaName = $('#areaDropdown').val();
-
-        // Clear seccion dropdown
-        $('#seccionDropdown').empty().append('<option value="">Seleccione una sección...</option>');
-
-        if (departamentoName !== '') {
-            // Make AJAX request to fetch secciones for selected departamento
-            $.ajax({
-                url: '/Participante/GetSeccionesByDepartamento',
-                type: 'GET',
-                data: { areaName: areaName, departamentoName: departamentoName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update seccion dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching secciones: ' + error
-                    });
-                }
-            });
-        }
+            if (departamentoName !== '') {
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { areaName: areaName, departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update seccion dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
+                });
+            }
+        });
     });
 </script>
