--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -2,41 +2,57 @@
 @using webMetics.Controllers
 @{
     ViewBag.Title = "Crear módulo";
+
+    var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
 @if (ViewBag.Id != "" && (ViewBag.Role == 1 || ViewBag.Role == 2))
 {
-    <div class="form-horizontal">
-        <h1 class="mt-5">@ViewBag.Title</h1>
-        <h5>Inserte los siguientes datos:</h5>
-        <h6 style="color:red"> * Son campos obligatorios</h6>
-        <hr />
-
-        @if (ViewBag.ErrorMessage != null)
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
         {
-            <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
-                @ViewBag.ErrorMessage
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
             </div>
         }
 
         @using (Html.BeginForm("AgregarGrupo", "Grupo", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-            <div class="row mt-1" style="margin-bottom:10%">
+            <h1>@ViewBag.Title</h1>
+            <hr />
+
+            if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-dark alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.ErrorMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+            if (ViewBag.SuccessMessage != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.SuccessMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
+            <div class="row mb-1">
                 <div class="col">
                     <div class="container">
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.nombre, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(grupoModel => grupoModel.nombre, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombre, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.descripcion, new { Style = "font-size:22px" })
                             @Html.TextAreaFor(grupoModel => grupoModel.descripcion, new { @class = "form-control", @rows = "3", @maxlength = "300", @autocomplete = "off" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.descripcion, "", new { @class = "text-danger" })
                         </div>
-                        <div class="row mt-1" style="margin-top:5px">
+                        <div class="row mt-1">
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.modalidad, new { Style = "font-size:22px" })
                                 @Html.DropDownListFor(grupoModel => grupoModel.modalidad, new List<SelectListItem> { new SelectListItem { Text = "Presencial", Value = "Presencial" }, new SelectListItem { Text = "Virtual", Value = "Virtual" }, new SelectListItem { Text = "AltoVirtual", Value = "Alto Virtual" } }, "Seleccione una modalidad...", new { @class = "form-select" })
@@ -55,25 +71,25 @@
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.cupo, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="form-group" style="margin-top:5px">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.lugar, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(grupoModel => grupoModel.lugar, new { @class = "form-control", @maxlength = "256", @autocomplete = "off" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.lugar, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group" style="margin-top:5px">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.horario, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(grupoModel => grupoModel.horario, new { @placeholder = "Ejemplo: L - V de 7am a 9am", @class = "form-control", @maxlength = "200", @autocomplete = "off" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.horario, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group" style="margin-top:5px">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.temaAsociado, new { Style = "font-size:22px" })
                             @Html.DropDownList("temaAsociado", ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.temaAsociado, "", new { @class = "text-danger" })
                         </div>
 
                         <br />
-                        <div class="row" style="margin-top:25px">
+                        <div class="row mt-3">
                             <h4>Fechas de inscripción</h4>
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.fechaInicioInscripcion)
@@ -90,7 +106,7 @@
                             </div>
                         </div>
 
-                        <div class="row" style="margin-top:25px">
+                        <div class="row mt-3">
                             <h4>Fecha de inicio y fin del grupo</h4>
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.fechaInicioGrupo)
@@ -106,8 +122,7 @@
                             </div>
                         </div>
 
-                        <br />
-                        <div>
+                        <div class="row mt-3">
                             <h4>Adjuntar archivo del módulo</h4>
                             <div class="form-group">
                                 @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control" })
