--- a/webMetics/Views/Usuario/GestionarContrasena.cshtml
+++ b/webMetics/Views/Usuario/GestionarContrasena.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.NewLoginModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Cambiar Contraseña";
+    ViewBag.Title = "Cambiar contraseña";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
