--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -58,12 +58,12 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrador</a>
                                 <div class="dropdown-menu">
-                                    @Html.ActionLink("Tipos de Actividad", "ListaTiposActividad", "TipoActividad", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Tipos de actividad", "ListaTiposActividad", "TipoActividad", new { }, new { @class = "dropdown-item" })
                                     @Html.ActionLink("Categorías", "ListaCategorias", "Categoria", new { }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Lista de Asesores", "ListaAsesores", "Asesor", new { }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Lista de Participantes", "VerParticipantes", "Participante", new { }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Crear un Tema", "CrearTema", "Tema", new { }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Crear un Módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Lista de asesores", "ListaAsesores", "Asesor", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Lista de participantes", "VerParticipantes", "Participante", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un tema", "CrearTema", "Tema", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
                                 </div>
                             </li>
                         }
@@ -72,8 +72,8 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Asesor</a>
                                 <div class="dropdown-menu">
-                                    @Html.ActionLink("Mis Módulos", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Crear un Módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Mis módulos", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
                                 </div>
                             </li>
                         }
