El identificador es el correo institucional y no la cédula.

--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -72,8 +72,8 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">Identificación</th>
                             <th scope="col">Nombre</th>
+                            <th scope="col">Correo institucional</th>
                             <th scope="col">Descripción</th>
                             <th scope="col">Teléfonos</th>
                             <th scope="col" style="width:5%;"></th>
@@ -93,8 +93,8 @@
                             }
 
                             <tr>
-                                <td>@asesor.identificacion</td>
                                 <td>@nombreCompleto</td>
+                                <td>@asesor.identificacion</td>
                                 <td>@asesor.descripcion</td>
                                 <td>@asesor.telefonos</td>
                                 <td>
