--- a/webMetics/Views/Participante/ObtenerParticipante.cshtml
+++ b/webMetics/Views/Participante/ObtenerParticipante.cshtml
@@ -17,7 +17,7 @@
             <hr />
             <div form-group>
                 <label>Identificación del participante a buscar:</label>
-                <input required class="form-control" type="number" id="participanteABuscar" name="participanteABuscar" placeholder="Identificación" />
+                <input required class="form-control" type="text" id="participanteABuscar" name="participanteABuscar" placeholder="Identificación" />
                 <small class="form-text text-muted">Ingresar el número de identificación único del participante.</small>
             </div>
 
