--- a/webMetics/Views/Usuario/GestionarContrasena.cshtml
+++ b/webMetics/Views/Usuario/GestionarContrasena.cshtml
@@ -43,7 +43,7 @@
                 <div class="col">
                     <div class="container">
                         <div class="form-group mt-1 mb-3">
-                            <label style="font-size: 22px">Identificación</label>
+                            <label style="font-size: 22px">Correo institucional</label>
                             @Html.TextBoxFor(model => model.identificacion, new { @class = "form-control", @readonly = "readonly" })
                         </div>
                         <div class="row mt-1">
