--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -46,7 +46,7 @@
                 <div class="card-footer text-center pt-2 pb-3">
                     <small>
                         ¿No tiene un usuario?
-                        @Html.ActionLink("Registrarse", "Registrarse", "Usuario", new { }, new { @class = "link-info" })
+                        @Html.ActionLink("Registrarse", "FormularioRegistro", "Usuario", new { }, new { @class = "link-info" })
                     </small>
                 </div>
             </div>
