--- a/webMetics/Views/Asesor/EditarAsesor.cshtml
+++ b/webMetics/Views/Asesor/EditarAsesor.cshtml
@@ -65,12 +65,6 @@
                 <div class="col">
                     <div class="container">
                         <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.identificacion, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(asesorModel => asesorModel.identificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(asesorModel => asesorModel.identificacion, "", new { @class = "text-danger" })
-                        </div>
-
-                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.nombre, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.nombre, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.nombre, "", new { @class = "text-danger" })
@@ -86,6 +80,12 @@
                             @Html.LabelFor(asesorModel => asesorModel.apellido2, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(asesorModel => asesorModel.apellido2, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.apellido2, "", new { @class = "text-danger", @maxlength = "64" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(asesorModel => asesorModel.correo, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
+                            @Html.TextBoxFor(asesorModel => asesorModel.correo, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(asesorModel => asesorModel.correo, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group mt-1">
