--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -115,9 +115,9 @@
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
-                            <th scope="col" style="width: 20%;">Identificación</th>
                             <th scope="col" style="width: 30%;">Nombre completo</th>
-                            <th class="text-center" scope="col" style="width: 45%;">Calificación</th>
+                            <th scope="col" style="width: 45%;">Correo institucional</th>
+                            <th class="text-center" scope="col" style="width: 20%;">Calificación</th>
                             <th scope="col" style="width: 5%;"></th>
                         </tr>
                     </thead>
@@ -132,8 +132,8 @@
                                 nombreCompleto += " " + calificacion.participante.segundoApellido;
                             }
                             <tr>
-                                <td class=" ">@calificacion.participante.idParticipante</td>
                                 <td class=" ">@nombreCompleto</td>
+                                <td class=" ">@calificacion.participante.idParticipante</td>
                                 <td class="  text-center">@calificacion.calificacion</td>
                                 <td class=" ">
                                     @Html.ActionLink(" ", "EditarCalificacion", "Calificaciones", new { idGrupo = ViewBag.IdGrupo, idParticipante = calificacion.participante.idParticipante }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
