--- a/webMetics/Views/Usuario/CambiarContrasena.cshtml
+++ b/webMetics/Views/Usuario/CambiarContrasena.cshtml
@@ -44,7 +44,7 @@
                     <div class="container">
                         <div class="form-group mt-1 mb-3">
                             <label style="font-size: 22px">Correo institucional</label>
-                            @Html.TextBoxFor(model => model.identificacion, new { @class = "form-control", @readonly = "readonly" })
+                            @Html.TextBoxFor(model => model.id, new { @class = "form-control", @readonly = "readonly" })
                         </div>
                         <div class="row mt-1">
                             <div class="col">
