--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -94,14 +94,14 @@
 
                             <tr>
                                 <td>@nombreCompleto</td>
-                                <td>@asesor.identificacion</td>
+                                <td>@asesor.id</td>
                                 <td>@asesor.descripcion</td>
                                 <td>@asesor.telefonos</td>
                                 <td>
-                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.identificacion }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
+                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.id }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
                                 </td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.identificacion')">
+                                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.id')">
                                         <i class="bi bi-trash"></i>
                                     </button>
                                 </td>
